# crablit

./: .gitignore  .travis.yml  15B.txt  16A1.txt  16A2.txt  16B1.txt  16B2.txt  18.txt  Cargo.toml  LICENSE  README.md  TODO.md  bench.sh  verben.csv  verben.txt  verbs_as_cards.tsv
examples/: 16.txt  16_hun_deu.txt  18.txt  18_eng.txt  18_eng_deu.txt  bad.tsv  clean_verbs.tsv  clean_verbs_hun_deu.tsv  daf_leicht_verben_hun_deu.csv  daf_leicht_verben_hun_deu.tsv  daf_leicht_verben_hun_deu_as_cards.csv  exampl.txt  exampl_eng_deu.txt  verben.tsv  verbs.tsv  worter.txt  wronk_verben.txt
files/: DaF_leicht_verben-biztos_alap.tsv  verben.tsv  verben.txt  verbs.csv  verbs.tsv  wronk_verben.txt
src/: args.rs  basic.rs  cards.rs  config.rs  consts.rs  enums.rs  expressions.rs  flashcards.rs  lib.rs  main.rs  state.rs  utils.rs  verbs.rs
version_history/: 0.1.0.rs  0.1.1.rs
wix/: main.wxs
