[package]
name = "crablit"
version = "0.1.4"
authors = ["Jeromos Kovács <iitsnotme214@protonmail.com>"]
description = "A cli learning app using spaced repetition."
categories = ["command-line-interface"]
keywords = [
  "srs",
  "cli",
  "vocabulary-learning",
  "language-learning",
  "flashcards",
]
homepage = "https://crates.io/crates/crablit"
repository = "https://github.com/JeromeSchmied/crablit"
license = "MIT"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to collect arguments
clap = { version = "4.4.8", features = ["derive"] }
# for colored output
colored = "2.0"
# for shuffling deck
nanorand = "0.7.0"
# for editable input
rustyline = "12.0.0"
