[package]
name = "crablit"
version = "0.1.6-git"
authors = ["Jeromos Kovács <iitsnotme214@protonmail.com>"]
description = "A cli learning app using spaced repetition."
categories = ["command-line-interface"]
keywords = [
  "srs",
  "cli",
  "vocabulary-learning",
  "language-learning",
  "flashcards",
]
homepage = "https://crates.io/crates/crablit"
repository = "https://github.com/JeromeSchmied/crablit"
license = "MIT"
readme = "README.md"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "DF323B3C-9AF0-40ED-A2E8-E1C5D615772A"
path-guid = "0B5C924B-9580-4836-92B0-86506605072C"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to collect cli arguments
clap = { version = "4.4.8", features = ["derive"] }
# for colored output
colored = "2.0"
# for data_dir
dirs = "5.0.1"
# for random generation: shuffling
fastrand = "2.0.1"
# for fixing stupid windows' colours
output_vt100 = "0.1.3"
# for editable input
rustyline = "13.0.0"
# testing
# assert_cmd = "2.0.13"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
