[package]
name = "crablit"
version = "0.1.14"
authors = ["Jeromos Kovács <iitsnotme214@protonmail.com>"]
description = "A cli learning app using spaced repetition."
categories = ["command-line-interface"]
keywords = [
  "srs",
  "cli",
  "vocabulary-learning",
  "language-learning",
  "flashcards",
]
homepage = "https://crates.io/crates/crablit"
repository = "https://github.com/JeromeSchmied/crablit"
license = "MIT"
readme = "README.md"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "62AC77F4-2DE5-4AD3-8A06-513A30143EFB"
path-guid = "BB57D6D2-0855-4746-8E20-037395B060F6"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
# to collect cli arguments
clap = { version = "4.5.1", features = ["derive"] }
# for data_dir
dirs = "5.0.1"
# for random generation: shuffling
fastrand = "2.0.1"
# logging
fern = "0.6.2"
log = "0.4.21"
# for fixing stupid windows' colours
output_vt100 = "0.1.3"
# for colored output
owo-colors = "4.0.0"
# for yummy readline-like input 
rustyline = "14.0.0"
# testing
# assert_cmd = "2.0.13"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
